<resources>
    <string name="app_name">JOIN THE MOVE</string>
    <string name="vos_activites_a_venir">Vos activités à venir</string>
    <string name="tendances">Populaire</string>
    <string name="sport">Sport</string>
    <string name="culture">Culture</string>
    <string name="join">Rejoindre</string>
    <string name="quit">Se Désinscrire</string>
    <string name="nb_subscribers">Nombre de participants</string>
    <string name="text_chk_cgu">En cochant, vous acceptez les CGU</string>
    <string name="text_btn_login">Se connecter</string>
    <string name="text_btn_register">Créer un compte</string>
    <string name="pseudo">Pseudo</string>
    <string name="hint_edit_text_pseudo">Saisir votre pseudo</string>
    <string name="hint_edit_text_password">Saisir votre mot de passe</string>
    <string name="hint_edit_text_mail">Saisir votre e-mail</string>
    <string name="search_menu_text">Search</string>
    <string name="filter_menu_text">Filter</string>
    <string name="profil_menu_text">Profile</string>
    <string name="more_menu_text">More</string>
    <string name="text_show_all_trophys">Voir tous les trophées</string>
    <string name="text_suggest">Propose </string>
    <string name="text_join">Participe à </string>
    <string name="text_login">Login</string>
    <string name="text_town">Ville</string>
    <string name="text_country">Pays</string>
    <string name="text_update_with_loc">Mettre à jour Ville/Pays via ma localisation</string>
    <string name="text_bio">Biographie</string>
    <string name="text_confidentiel">Confidentialité</string>
    <string name="text_password">Mot de passe</string>
    <string name="text_birthday">Date de naissance</string>
    <string name="edit_profil_menu_text">Modifier le profile</string>
    <string name="text_level">Niveau</string>
    <string name="text_activity">activités</string>
    <string name="uploaded_by">Mis en ligne par</string>

    <string name="text_name_meeting">Nom du meeting</string>
    <string name="text_theme">Thème</string>
    <string name="text_type">Type</string>
    <string name="text_date_meeting">Date du meeting</string>
    <string name="text_date">Date</string>
    <string name="text_location_meeting">Localisation du meeting</string>
    <string name="text_my_location_on_map">Me localiser sur la carte</string>
    <string name="text_more_infos_meeting">Informations complémentaires</string>
    <string name="text_add_meeting">Créer un meeting</string>
    <string name="sort_by">Trier par</string>
    <string name="date_event">Date de l\'évènement</string>
    <string name="proximity">Proximité</string>
    <string name="none">Aucun</string>
    <string name="no_result">Aucun Résultat</string>
    <string name="text_modulate_home_screen">Moduler l\'écran d\'acceuil</string>
    <string name="text_trend">Tendance</string>
    <string name="text_more_trend">Afficher la liste des activités tendance</string>
    <string name="text_promote">Mise en avant</string>
    <string name="text_more_promote">Thème de prédilection </string>
    <string name="text_theme_app">Thème de l\'application</string>
    <string name="text_light_theme">Thème clair</string>
    <string name="text_dark_theme">Thème Sombre</string>
    <string name="text_notification">Notifications</string>
    <string name="text_allow_notification">Autoriser les notifications</string>
    <string name="text_more_allow_notification">Permetttre à l\'application d\'envyer des notifications</string>
    <string name="text_location">Localisation</string>
    <string name="text_allow_location">Autoriser la localisation</string>
    <string name="text_more_allow_location">Permettre à l\'application de mettre à jour votre localisation</string>
    <string name="title_fragment_profil">Profil</string>
    <string name="title_fragment_modify_profil">Modifier le profil</string>
    <string name="title_fragment_details">Détails</string>
    <string name="title_fragment_preferences">Préferences</string>
    <string name="title_fragment_create_meeting">Créer un meeting</string>
    <string name="details">Détails</string>

</resources>
