<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Header"
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPseudo"
            style="@style/EditTextLoginActivity"
            android:layout_height="40dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="@id/tvTitle"
            android:layout_marginTop="55dp"
            android:hint="@string/hint_edit_text_pseudo"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/EditTextLoginActivity"
            android:layout_height="40dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            app:layout_constraintTop_toBottomOf="@id/etPseudo"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="@id/tvTitle"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_edit_text_password"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonStyle"
            android:paddingHorizontal="12dp"
            android:drawablePadding="5dp"
            android:background="@drawable/rounded_button"
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="@id/tvTitle"
            android:text="@string/text_btn_login"
            android:layout_marginTop="25dp"
            android:textSize="20sp"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonStyle"
            android:paddingHorizontal="12dp"
            android:drawablePadding="5dp"
            android:background="@drawable/rounded_button"
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="@id/tvTitle"
            android:text="@string/text_btn_register"
            android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>