<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"/>

    <androidx.appcompat.widget.AppCompatEditText
    android:id="@+id/etMail"
    style="@style/EditTextLoginActivity"
    android:drawableStart="@drawable/ic_email_black_24dp"
    app:layout_constraintTop_toBottomOf="@id/tvTitle"
    app:layout_constraintStart_toStartOf="@+id/tvTitle"
    app:layout_constraintEnd_toEndOf="@+id/tvTitle"
    android:layout_marginTop="96dp"
    android:hint="@string/hint_edit_text_mail"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLogin"
        style="@style/EditTextLoginActivity"
        android:drawableStart="@drawable/ic_person_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/etMail"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_edit_text_login"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        style="@style/EditTextLoginActivity"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/etLogin"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_edit_text_password"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCGU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkCGU"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCGU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/chkCGU"
            app:layout_constraintStart_toEndOf="@id/chkCGU"
            app:layout_constraintBottom_toBottomOf="@id/chkCGU"
            android:layout_marginStart="8dp"
            android:text="@string/text_chk_cgu"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clCGU"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        android:text="@string/text_btn_register"

        android:layout_marginTop="25dp"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        android:text="@string/text_btn_login"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>