<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:translationZ="2dp"
        style="@style/ButtonStyleQuit"
        android:id="@+id/btnCancelCreateMeeting"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnConfirmCreateMeeting"
        android:src="@drawable/ic_clear_black_24dp"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:translationZ="2dp"
        style="@style/ButtonStyle"
        android:id="@+id/btnConfirmCreateMeeting"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_check_black_24dp"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCancelCreateMeeting"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNameMeeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_name_meeting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etNameMeeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvNameMeeting" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNameMeeting"
                android:layout_marginTop="8dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_theme"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTheme" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@id/clTheme"
                app:layout_constraintTop_toBottomOf="@id/etNameMeeting"
                android:layout_marginTop="8dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvType" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDateMeeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/clTheme"
                android:text="@string/text_date_meeting"
                android:layout_marginTop="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDateMeeting"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDateMeeting"
                app:layout_constraintStart_toStartOf="parent"
                android:inputType="datetime"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/dtpDateMeeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/etDateMeeting"
                app:layout_constraintTop_toTopOf="@id/etDateMeeting"
                app:layout_constraintBottom_toBottomOf="@id/etDateMeeting"
                android:src="@drawable/ic_date_range_black_24dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/etDateMeeting"
                android:layout_marginTop="8dp"
                android:text="@string/text_location_meeting"/>
            
            <com.google.android.gms.maps.MapView
                android:id="@+id/mapMeeting"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/tvLocation"
                android:layout_marginTop="8dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLocalisation"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mapMeeting"
                android:src="@drawable/location_on"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/imgLocalisation"
                app:layout_constraintTop_toTopOf="@id/imgLocalisation"
                app:layout_constraintBottom_toBottomOf="@id/imgLocalisation"
                android:text="@string/text_my_location_on_map"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMoreInformations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imgLocalisation"
                android:layout_marginTop="8dp"
                android:text="@string/text_more_infos_meeting"/>
            
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMoreInformations"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@id/tvMoreInformations"
                android:inputType="textMultiLine"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>